@@ -1,3 +1,8 @@
+2006-04-28  James E Wilson  <wilson@specifix.com>
+
+	* m68k-dis.c (match_insn_m68k): Restore fprintf_func before printing
+	error message.
+
 2006-04-28  Thiemo Seufer  <ths@mips.com>
             David Ung  <davidu@mips.com>
 	    Nigel Stephens  <nigel@mips.com>
